syntax = "proto3";

package proto;

message EchoRequest {
	string message = 1;
}

message EchoResponse {
	string message = 1;
}

service EchoService {
	rpc Echo(EchoRequest) returns (EchoResponse);
}
